# repoweave

./: .gitignore  Cargo.toml  LICENSE  README.md  book.toml  build.rs  dist-workspace.toml  flake.nix
.githooks/: pre-push
.github/workflows/: ci.yml  pages.yml  publish-shims.yml  release.yml
docs/: SUMMARY.md  adjacent-tools.md  concepts.md  developing.md  install.sh  integrations.md  reference.md  releasing.md  repoweave.md  tutorial.md  workflows.md
examples/hooks/: rwv-workweave-create.sh  rwv-workweave-remove.sh
npm/repoweave/: package.json
npm/repoweave-darwin-arm64/: package.json
npm/repoweave-darwin-x64/: package.json
npm/repoweave-linux-arm64/: package.json
npm/repoweave-linux-x64/: package.json
npm/repoweave-windows-x64/: package.json
npm/repoweave/lib/: main.js
npm/scripts/: package-binaries.sh
python/: build_wheels.py
python/repoweave/: pyproject.toml
python/repoweave/src/repoweave/: __init__.py  __main__.py
python/scripts/: build-wheels.sh
src/: activate.rs  add_remove.rs  check.rs  fetch.rs  git.rs  init.rs  integration.rs  integration_runner.rs  lib.rs  lock.rs  main.rs  manifest.rs  prime.rs  registry.rs  setup.rs  status.rs  sync.rs  vcs.rs  weave.rs  workspace.rs  workweave.rs
src/integrations/: cargo_workspace.rs  gita.rs  go_work.rs  mod.rs  npm_workspaces.rs  pnpm_workspaces.rs  static_files.rs  uv_workspace.rs  vscode_workspace.rs
tests/: activate_test.rs  add_remove_test.rs  check_test.rs  context_display_test.rs  doc_claims_activate_test.rs  doc_claims_fetch_test.rs  doc_claims_misc_test.rs  e2e-claude-workweave.sh  e2e_cargo_test.rs  e2e_ecosystem_constraints_test.rs  e2e_go_test.rs  e2e_install_test.rs  e2e_npm_test.rs  e2e_registry_test.rs  e2e_sync_abort_test.rs  e2e_workweave_isolation_test.rs  fetch_test.rs  hook_simulation_test.rs  index_drift_test.rs  init_test.rs  integration_framework_test.rs  integrations_test.rs  lock_test.rs  manifest_test.rs  prime_test.rs  registry_test.rs  setup_test.rs  vcs_test.rs  weave_test.rs  working_tree_drift_test.rs  workspace_test.rs  workweave_idempotent_test.rs  workweave_test.rs
tests/fixtures/cargo/rwv-test-bin/: Cargo.toml
tests/fixtures/cargo/rwv-test-bin/src/: main.rs
tests/fixtures/cargo/rwv-test-lib/src/: lib.rs
tests/fixtures/go/rwv-test-protocol/: go.mod  protocol.go
tests/fixtures/go/rwv-test-server/: go.mod  main.go
tests/fixtures/npm/rwv-test-server/: index.js  package.json
tests/fixtures/npm/rwv-test-types/: index.js  package.json
tests/fixtures/python/rwv-test-server/: pyproject.toml
tests/fixtures/python/rwv-test-server/src/rwv_test_server/: __init__.py
tests/fixtures/python/rwv-test-types/: pyproject.toml
tests/fixtures/python/rwv-test-types/src/rwv_test_types/: __init__.py
