[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "repoweave"
version = "0.2.0"
description = "A cross-repo workspace manager"
license = "MIT"
requires-python = ">=3.8"
keywords = ["workspace", "monorepo", "git", "multi-repo"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Build Tools",
]

[project.urls]
Repository = "https://github.com/cwalv/repoweave"

# No [project.scripts]: the native rwv binary is shipped in the wheel's
# .data/scripts/ directory (via cargo-dist / build_wheels.py) and lands in
# bin/rwv directly at install time. Matches ruff and uv, which use the same
# packaging approach and ship no console-script entry points.

[tool.hatch.build.targets.wheel]
packages = ["src/repoweave"]
